--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -4,6 +4,9 @@
 
 // formula
 
+h2
+  font-size 1.33em
+
 .mobile-warning
   position fixed
   z-index 9999
@@ -61,14 +64,15 @@ iframe[name*='dupe-frame']
 
 
   .header
-    background-image url(../images/nuvc-logo-backed.png)
+    background-image url(../images/epic-logo.png)
     background-size contain
     background-repeat no-repeat
     background-position center center
-    width 225px
-    height 225px
+    width 265px
+    height 265px
     display block
     margin 30px auto
+    margin-bottom 5px
     z-index 2
     position relative
     // safari
@@ -215,7 +219,7 @@ iframe[name*='dupe-frame']
 
     .next-btn
       height formula-height + 6px
-      top (header-height / 2)px - 3px
+      top (header-height / 2)px - 16px
       right -20px
       transform rotateY(7deg) translateZ(-8px)
       -moz-transform rotateY(7deg) translateZ(-8px) translateX(-3px) translateY(-6px)
