--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -16,7 +16,7 @@ html(lang='en')
       .forcefield
         h2= header
         .input-group
-          textarea(id=id, required, name!=attributes.name)
+          textarea(id=id, name!=attributes.name)
           label= label
       if block
         block
@@ -56,7 +56,11 @@ html(lang='en')
                 .glance
                 .pill-right
                   span .edu
-              
+                  
+          .primary-window.page
+            i.back-btn Back
+            .forcefield
+              h3 Basic Information
               .input-group
                 input#year(type='text', required)
                 label Year (e.g.; 2017)
@@ -72,23 +76,23 @@ html(lang='en')
                 label Phone Number
                 .glance
 
-          .primary-window.page
+          .primary-window.page#branch
             i.back-btn Back
             .forcefield
               h2 Where do you see yourself in EPIC?
               .input-group
-                input(type='radio', name='track', value='EPIC Teams', required)
+                input(type='radio', name='applying-for', value='EPIC Teams', required)
                 label EPIC Teams
                 
-                input(type='radio', name='track', value='EPIC General Membership', required)
+                input(type='radio', name='applying-for', value='EPIC General Membership', required)
                 label EPIC General Membership
 
-          .primary-window.page#branch-1
+          .primary-window.page.end#branch-1
             i.back-btn Back
             .forcefield
               h2 EPIC General Membership Application
               .input-group
-                textarea#what-do-you-want(required)
+                textarea#what-do-you-want
                 label What do you want to get out of your membership?
 
             .thanks
@@ -101,25 +105,25 @@ html(lang='en')
               h2 EPIC Team Application
               h3 I want to...
               .input-group.checkboxes
-                input#run-hackathon(type='checkbox', required)
+                input#run-hackathon(type='checkbox')
                 label Run a hackathon (WildHacks)
                 
-                input#run-business-pitch-competition(type='checkbox', required)
+                input#run-business-pitch-competition(type='checkbox')
                 label Run a Business Pitch Competition (NUVC)
                 
-                input#code(type='checkbox', required)
+                input#code(type='checkbox')
                 label Code (Tech)
                 
-                input#build-brand(type='checkbox', required)
+                input#build-brand(type='checkbox')
                 label Build a Brand (Branding)
                 
-                input#teach-entrepreneurship(type='checkbox', required)
+                input#teach-entrepreneurship(type='checkbox')
                 label Teach Entrepreneurship (Launch)
                 
-                input#inspire-entrepreneurs(type='checkbox', required)
+                input#inspire-entrepreneurs(type='checkbox')
                 label Inspire Budding Entrepreneurs (Venture)
                 
-                input#expand-epic-reach(type='checkbox', required)
+                input#expand-epic-reach(type='checkbox')
                 label Expand EPIC's Reach (BizDev)
 
           +essayQuestion('story', "What's your story? Tell us about yourself.", 'ex: what are you passionate about? What was your journey to NU?')
@@ -127,7 +131,13 @@ html(lang='en')
           +essayQuestion('why-passionate-entrep', 'Why are you passionate about entrepreneurship?', 'Feel free to tell us about any entrepreneurial experience you have.')
           +essayQuestion('how-contribute', 'What will you contribute to the specific team you are interested in?', 'How do you see yourself fitting in?')
           +essayQuestion('other-involvements', 'What else are you involved in?', 'ex: Work-Study, other student orgs, study abroad, etc.')
-          +essayQuestion('anything-else', 'Anything else you would like us to consider?', 'ex: share a fun fact!')
+          .primary-window.page.end
+            i.back-btn Back
+            .forcefield
+              h2 Anything else you would like us to consider?
+              .input-group
+                textarea(id='anything-else')
+                label (ex: share a fun fact!)
             .thanks
               h3 Thanks for applying! We'll be in touch.
               img(src="./images/epic-logo.png")
