--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -349,6 +349,32 @@ iframe[name*='dupe-frame']
   &:hover
     border 1px solid rgba(0,0,0,0.2)
 
+p.collapse
+  margin 0
+  margin-top -20px
+
+.overview-window
+  height 300px
+  overflow-y scroll
+
+  dt
+    text-decoration underline
+    cursor pointer
+    padding-bottom 10px
+
+  dd
+    font-style italic
+
+.submit-btn
+  background white
+  text-align center
+  margin 10px
+  padding 10px 0
+  cursor pointer
+
+.hidden
+  display none
+
 // FUKKKKKKiNG FIREFOX
 // NOTE  the build kills the moz keyframes because it's a bitch about this shit.
 // soooooo... ugh. copy this line every time it builds and you want to save.
