Add overview slide at beginning

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -87,9 +87,24 @@ html
         form
           .primary-window.page.current
             .forcefield
-              h2 Welcome to the NUVC 2016 Application!
-              h4 Let's bring your ideas to life.
-              hr
+              h2 Welcome to the 2016 NUVC Application!
+              p
+                | The program is open to all qualified Northwestern undergraduate and graduate university
+                | students. Students must be available for both semifinals on May 2, and finals on June 2.
+                | During the spring quarter you will work alongside other startups, and receive mentorship
+                | from industry professionals.
+              p
+                | To apply, please fill out this application with information about you, your teammates and
+                | your startup. You will need to upload an Executive Summary (.doc, .docx, .pdf, .txt. &leq; 3 pages) and
+                | a Pitch Deck (.ppt, .pptx, .pdf. &leq; 20 slides).
+              p Your progress will be auto-saved every 5 minutes.
+                | For any questions or concerns, please contact Shae Wang at
+                a(href='mailto:nuvc@nuisepic.com') nuvc@nuisepic.com
+                | .
+
+          .primary-window.page
+            .forcefield
+              h2 Basic Information
               .input-group
                 input#business-name(type="text", name='entry.1504244289', required)
                 label Business Name
@@ -161,6 +176,7 @@ html
             i.back-btn Back
             .forcefield
               h2 Uploads
+              h4 You've made it! This is the last page. <br> When you click next, your app will be submitted.
               .input-group
                 input#executive-summary(type='text', name='entry.1459856723', required, disabled)
                 label#executive-summary-btn Executive Summary (.doc, .docx, .pdf, .txt. &leq; 3 pages)
