--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -99,7 +99,7 @@ html
                 | a Pitch Deck (.ppt, .pptx, .pdf. &leq; 20 slides).
               p Your progress will be auto-saved every 5 minutes.
                 | For any questions or concerns, please contact Shae Wang at
-                a(href='mailto:nuvc@nuisepic.com') nuvc@nuisepic.com
+                a(href='mailto:nuvc@nuisepic.com') &nbsp;nuvc@nuisepic.com
                 | .
 
           .primary-window.page
