Make end note better and add mailto link

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -188,10 +188,9 @@ html
             .thanks
               h3 Thanks for applying! We'll be in touch.
               h3
-                b NOTE
+                b NOTE&nbsp;
                 | You should receive a confirmation email within 12 hours from the NUVC email account
-                | (nuvc@nuisepic.com), and if you do not, please email <b>us</b> and let us know, because
-                | we may not have received your application.
+                | (nuvc@nuisepic.com). If you do not, please <b><a href='mailto:nuvc@nuisepic.com'>email us</a></b> and let us know.
               img(src="./images/nuvc-logo.png")
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID.
