Correct reference to css in index.jade

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -6,7 +6,7 @@ html
     meta(name='description', content='Apply to EPIC, Northwestern\'s premier Entrepreneurship Student Group!')
     meta(name='viewport', content='width=device-width, initial-scale=1')
 
-    link(rel='stylesheet', href='styles/main.css')
+    link(rel='stylesheet', href='main.css')
 
   mixin essayQuestion(id, header, label)
     .primary-window.page
