Add ToProgress progress indicator

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -166,6 +166,7 @@ html
 
     // build:js scripts/main.js
     script(type='text/javascript', src='../../node_modules/store/store.min.js')
+    script(src='../scripts/ToProgress.min.js', async)
     script(src='../scripts/extensions.js', async)
     script(src='../scripts/formula_anim.js', async)
     script(src='../scripts/formula_notify.js', async)
