--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -36,10 +36,16 @@ iframe[name*='dupe-frame']
   perspective 300px
   perspective-origin center center
 
+#formula-outline
+  display inline-block
+  margin-right 10%
+  font-size 18px
+  color white
+
 .formula
-  display block
+  display inline-block
   margin 0 auto
-  width 85%
+  width 75%
   position relative
   max-width 700px
   transition all ease 1s
@@ -48,7 +54,6 @@ iframe[name*='dupe-frame']
   form
     position relative
     transition all ease 0.5s
-    left 0
 
     -moz-perspective 300px
 
