--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -20,7 +20,7 @@ html
         block
 
   body
-    ul#formula-container
+    #formula-container
       .mobile-warning
         p Hey! It looks like you're using a mobile phone, which is awesome.
         p But we spent a lot of time making this application look juuuust right for desktop, and it'll probably be a little squishy on your phone.
@@ -29,29 +29,40 @@ html
           a(href='#', do='close-warning') tap here
           | .
         p Otherwise, come back on your computer later, ok? ;)
-      #formula-outline
+
+      // Outline pane. Will be populated by JavaScript.
+      ul#formula-outline
+
+      // NOTE(jordan): dupe-frame: for to dupe the form into submitting to a Google spreadsheet
+      // without refreshing the page.
       iframe(name='dupe-frame')
+
+      // NOTE(jordan): Begin the actual content!
       .formula
         .header
+
+        // NOTE(jordan): Hidden at start.
         .next-btn
           .inner-btn
             span Next
+
+        // NOTE(jordan): Begin actual form.
         form
           .primary-window.page.current
             .forcefield
               h2 Welcome to the Official EPIC Application!
               .input-group
-                input#name(type="text", name='entry.354342888', required)
+                input#name(type='text', name='entry.354342888', required)
                 label Name (First and Last)
                 .glance
               .input-group
-                input#email(type="email", name='entry.436547589', required)
+                input#email(type='email', name='entry.436547589', required)
                 label School Email
                 .glance
                 .pill-right
                   span .edu
               .input-group
-                input#hearsay(type="text", name='entry.1486322634', required)
+                input#hearsay(type='text', name='entry.1486322634', required)
                 label How did you hear about our application?
                 .glance
           .primary-window.page
@@ -59,15 +70,15 @@ html
             .forcefield
               h2 Some Basic Info
               .input-group
-                input#year(type="text", name='entry.1494609428', required)
+                input#year(type='text', name='entry.1494609428', required)
                 label Class Year (eg: 2017)
                 .glance
               .input-group
-                input#major(type="text", name='entry.252100536', required)
+                input#major(type='text', name='entry.252100536', required)
                 label Major
                 .glance
               .input-group
-                input#phone(type="tel", name='entry.1881012293', required)
+                input#phone(type='tel', name='entry.1881012293', required)
                 label Phone Number: (xxx) yyy zzzz
                 .glance
           .primary-window.page
@@ -110,60 +121,26 @@ html
               .input-group
                 textarea#explain-skills(name='entry.549867061', required)
                 label Explain your selections
+
+          // NOTE(jordan): Long-form response section.
           +essayQuestion('story', 'What\'s your story? Tell us about yourself.', 'Ex: What are you passionate about? What was your journey to NU?')(name='entry.1482811689')
-
           +essayQuestion('why-epic-matters', 'Why does EPIC matter to Northwestern?', 'How is it different from other organizations?')(name='entry.1038701340')
-
           +essayQuestion('why-interested', 'Why are you interested in joining EPIC?', 'What do you hope to learn? What skills do you hope to gain?')(name='entry.1277416023')
-
           +essayQuestion('how-contribute', 'How will you contribute to your team?', 'Whichever it may be. How will you foster inter-team cooperation?')(name='entry.1133447629')
-
           +essayQuestion('other-involvements', 'What else are you involved in?', 'e.g.; Work-study, ISBE, DOJO, etc.')(name='entry.93355119')
-
           +essayQuestion('elevator-pitch', 'Why are you the best person for EPIC?', '5 Minutes! Elevator Pitch! Go!')(name='entry.555173403')
-
           +essayQuestion('anything-else', 'Anything else you would like us to consider?', 'Maybe share some fun (or serious) facts. :)')(name='entry.1658748676')
+
+            // NOTE(jordan): Displayed after form submission animation completes.
             .thanks
               h3 Thanks for applying! We'll be in touch. :D
-              img(src="./images/fyeah2.png")
+              img(src='./images/fyeah2.png')
 
-    // Google Analytics: change UA-XXXXX-X to be your site's ID.
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    // NOTE(jordan): Embeds.
+    include ./google-analytics
+    include ./olark
 
-      ga('create', 'UA-43952603-6', 'auto');
-      ga('send', 'pageview');
-
-    // begin olark code
-    script(data-cfasync='false').
-      /*<![CDATA[*/window.olark||(function(c){var f=window,d=document,l=f.location.protocol=="https:"?"https:":"http:",z=c.name,r="load";var nt=function(){
-      f[z]=function(){
-      (a.s=a.s||[]).push(arguments)};var a=f[z]._={
-      },q=c.methods.length;while(q--){(function(n){f[z][n]=function(){
-      f[z]("call",n,arguments)}})(c.methods[q])}a.l=c.loader;a.i=nt;a.p={
-      0:+new Date};a.P=function(u){
-      a.p[u]=new Date-a.p[0]};function s(){
-      a.P(r);f[z](r)}f.addEventListener?f.addEventListener(r,s,false):f.attachEvent("on"+r,s);var ld=function(){function p(hd){
-      hd="head";return["<",hd,"></",hd,"><",i,' onl' + 'oad="var d=',g,";d.getElementsByTagName('head')[0].",j,"(d.",h,"('script')).",k,"='",l,"//",a.l,"'",'"',"></",i,">"].join("")}var i="body",m=d[i];if(!m){
-      return setTimeout(ld,100)}a.P(1);var j="appendChild",h="createElement",k="src",n=d[h]("div"),v=n[j](d[h](z)),b=d[h]("iframe"),g="document",e="domain",o;n.style.display="none";m.insertBefore(n,m.firstChild).id=z;b.frameBorder="0";b.id=z+"-loader";if(/MSIE[ ]+6/.test(navigator.userAgent)){
-      b.src="javascript:false"}b.allowTransparency="true";v[j](b);try{
-      b.contentWindow[g].open()}catch(w){
-      c[e]=d[e];o="javascript:var d="+g+".open();d.domain='"+d.domain+"';";b[k]=o+"void(0);"}try{
-      var t=b.contentWindow[g];t.write(p());t.close()}catch(x){
-      b[k]=o+'d.write("'+p().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}a.P(2)};ld()};nt()})({
-      loader: "static.olark.com/jsclient/loader0.js",name:"olark",methods:["configure","extend","declare","identify"]});
-      /* custom configuration goes here (www.olark.com/documentation) */
-      olark.identify('2927-692-10-4152');/*]]>*/
-    noscript
-      a(href="https://www.olark.com/site/2927-692-10-4152/contact", title="Contact us", target="_blank") Questions? Feedback?
-      | powered by
-      a(href="http://www.olark.com?welcome", title="Olark live chat software") Olark live chat software
-    // end olark code
-
-    script(type="text/javascript", src="//api.filepicker.io/v1/filepicker.js" async)
+    script(type='text/javascript', src='//api.filepicker.io/v1/filepicker.js' async)
 
     // build:js scripts/main.js
     script(type='text/javascript', src='../../node_modules/store/store.min.js')
