Move pug for embeds into their own directory.

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -137,8 +137,8 @@ html
               img(src='./images/fyeah2.png')
 
     // NOTE(jordan): Embeds.
-    include ./google-analytics
-    include ./olark
+    include ./embed/google-analytics
+    include ./embed/olark
 
     script(type='text/javascript', src='//api.filepicker.io/v1/filepicker.js' async)
 
